--- a/autoconfig.yml
+++ b/autoconfig.yml
@@ -6,6 +6,7 @@
 
 config_version: 2
 settings:
-  content.register_protocol_handler:
-    https://calendar.google.com?cid=%25s: false
-    https://mail.google.com?extsrc=mailto&url=%25s: false
+  statusbar.show:
+    global: always
+  tabs.show:
+    global: always
